init BigData